--- a/position.html
+++ b/position.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Position</title>
-  <link rel="stylesheet" href="parent_styles.css"/>
+  <link rel="stylesheet" href="position_styles.css"/>
 </head>
 <body>
   <div class="parent">
